--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,10 @@
             android:name=".MovieDetailsActivity"
             android:label="Movie Details">
         </activity>
+        <activity
+            android:name=".SearchResultsActivity"
+            android:label="search List">
+        </activity>
     </application>
 
 </manifest>
