--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,10 @@
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.JOB_SCHEDULED" />
+
+
     <application
 
         android:allowBackup="true"
@@ -13,7 +17,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.MovieMate"
-        tools:targetApi="31">
+        tools:targetApi="33">
+        <service android:name=".ReminderJobService"
+            android:permission="android.permission.BIND_JOB_SERVICE"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -35,6 +41,7 @@
             android:name=".SearchResultsActivity"
             android:label="search List">
         </activity>
+
         <receiver android:name=".MyReceiver"
             android:exported="true">
             <intent-filter>
@@ -42,5 +49,4 @@
             </intent-filter>
         </receiver>
     </application>
-=
 </manifest>
